...

    return Column(
      children: [
        Padding(
          padding: const EdgeInsets.all(8),
          child: TextField(
            key: const Key('verificationCodeKey'),
            autocorrect: false,
            controller: _verificationCodeController,
            decoration: InputDecoration(
              border: OutlineInputBorder(
                borderRadius: BorderRadius.circular(4),),
              hintText: 'Code',
...
